<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_header">

        <Preference
            app:key="per_app_settings"
            app:summary="Click here to open Per App Settings"
            app:title="@string/per_app_setting_btn" />

        <EditTextPreference
            android:inputType="number"
            app:key="delay"
            app:title="@string/delay_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="number"
            app:key="fps"
            app:title="@string/fps_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="numberDecimal"
            app:key="scale"
            app:title="@string/scale_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="display_mode_id"
            app:title="@string/display_mode_list"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="mod_opcode"
            app:title="@string/debug_title" />

    </PreferenceCategory>

</PreferenceScreen>